crates/openracing-diagnostic/tests/snapshots/snapshot_tests__telemetry_data_snapshots__default_telemetry.snap
---
source: crates/openracing-diagnostic/tests/snapshot_tests.rs
expression: "TelemetryData::default()"
---
TelemetryData {
    ffb_scalar: 1.0,
    rpm: 0.0,
    speed_ms: 0.0,
    slip_ratio: 0.0,
    gear: 0,
    car_id: None,
    track_id: None,
}
